...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="N6Z-jT-bjW" id="6Qv-Ys-yZt"/>
                            <outlet property="delegate" destination="N6Z-jT-bjW" id="gQV-Gz-7PH"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Places" id="aRe-6m-QIv">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="mEK-CY-svL">
                            <connections>
                                <segue destination="BYZ-38-t0r" kind="presentation" identifier="showForm" id="yyb-wp-OI4"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w4e-jx-ozS">
                                                        <state key="normal" title="Button"/>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hKg-c1-YgZ">
                                                        <state key="normal" title="Save"/>
                                                        <connections>
                                                            <action selector="savePlace:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tDL-m1-lmE"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                            </stackView>
...
                                                        </connections>
                                                    </switch>
                                                </subviews>
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="tjj-H0-TPi">
                                                <subviews>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Latitude" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ezs-MR-ToP">
                                                        <nil key="textColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Longitude" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1nq-Kn-ELu">
                                                        <nil key="textColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                </subviews>
                                            </stackView>
...
